JD changed css format as nested and create some variables

--- a/jd.html
+++ b/jd.html
@@ -8,21 +8,21 @@
 <body>
     <div class="all-parent">
         <div class="header">
-            <div class="header-icon"></div>
-            <div class="header-title"></div>
-            <div class="header-user"></div>
+            <div class="icon"></div>
+            <div class="title"></div>
+            <div class="user"></div>
         </div>
         <div class="nav-content">
             <div class="nav">
-                <div class="nav-system"></div>
-                <div class="nav-user"></div>
-                <div class="nav-test"></div>
-                <div class="nav-exam"></div>
-                <div class="nav-result"></div>
+                <div class="system"></div>
+                <div class="user"></div>
+                <div class="test"></div>
+                <div class="exam"></div>
+                <div class="result"></div>
             </div>
             <div class="content">
-                <div class="content-progress"></div>
-                <div class="content-finish"></div>
+                <div class="progress"></div>
+                <div class="finish"></div>
             </div>
         </div>
     </div>
